aura: Make WebContents VISIBLE when shown in Alt-Tab view on ChromeOS.

Today, WebContents::GetVisibility() returns HIDDEN for a tab that is in
a minimized window shown in the Alt-Tab view on ChromeOS. This is
because content::WebContents::GetVisibility() indicates the visibility
of the aura::Window, and isn't affected by the mirroring functionnality
used by the Alt-Tab view.

Unfortunately, the fact that WebContents::GetVisibility() returns
HIDDEN makes TabManager think that the tab is eligible for freezing and
discarding (freezing or discarding a tab in Alt-Tab breaks the live
view functionnality). TabManager could check by itself whether the
WebContents IsBeingCaptured(), but instead of requiring that every
call to WebContents::GetVisibility() be accompanied to a check to
IsBeingCaptured(), we believe it's better to return VISIBLE from
GetVisibility() when a tab is displayed in Alt-Tab view.

Bug: 876103
Change-Id: I01c07858bcae3038577bac1408c67eb72fe08e0c
Reviewed-on: https://chromium-review.googlesource.com/1191862
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: François Doray <fdoray@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587711}
Former-commit-id: aec643b68e00139a0b5e63d3abadb69551b761bf