content/browser/web_contents/web_contents_view_aura.h
@@ -18,6 +18,7 @@
 #include "content/common/buildflags.h"
 #include "content/common/content_export.h"
 #include "content/public/browser/global_routing_id.h"
+#include "content/public/browser/visibility.h"
 #include "ui/aura/client/drag_drop_delegate.h"
 #include "ui/aura/window.h"
 #include "ui/aura/window_delegate.h"
@@ -96,6 +97,12 @@ class CONTENT_EXPORT WebContentsViewAura
 
   // Called from CreateView() to create |window_|.
   void CreateAuraWindow(aura::Window* context);
+
+  // Computes the view's visibility updates the WebContents accordingly.
+  void UpdateWebContentsVisibility();
+
+  // Computes the view's visibility.
+  Visibility GetVisibility() const;
 
   // Overridden from WebContentsView:
   gfx::NativeView GetNativeView() const override;
